--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qrgenerator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rupamjha1999.github.io/QR-Generator-Scanner/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -22,6 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
